--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux Boilerplate</title>
+    <title>Re-dux Boilerplate</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/static/bundle.css" />
   </head>
   <body>
     <div id="root">
